add remove node feature